# CppPool

./: CMakeLists.txt  README.md
include/: CppPool.h  TaskQueue.h  Worker.h
src/: CppPool.cpp  Worker.cpp
tests/: CMakeLists.txt  demo.cpp
